install & config tailwindcss

--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "nuxt-app": "file:",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "@nuxtjs/tailwindcss": "^6.12.1"
   }
 }
