--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue-router": "latest"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^6.12.1"
+    "@nuxtjs/tailwindcss": "^6.12.1",
+    "prisma": "^5.20.0"
   }
 }
